--- a/src/main/resources/templates/components/form_datos.html
+++ b/src/main/resources/templates/components/form_datos.html
@@ -38,13 +38,11 @@
     display: flex;
 }
 
-/* Contenedor de cada grupo de formulario */
 .form-group {
     margin-bottom: 20px;
     padding: 5px;
 }
 
-/* Estilos para las etiquetas de los campos */
 .form-label {
     display: flex;
     font-size: 16px;
@@ -53,24 +51,22 @@
     font-weight: 600;
 }
 
-/* Estilos para los campos de selección (select) */
 .form-select {
-    width: 180px; /* Ancho del select */
-    padding: 10px; /* Espaciado interno */
-    font-size: 14px; /* Tamaño de fuente */
-    border: 1px solid #ccc; /* Borde */
-    border-radius: 4px; /* Bordes redondeados */
-    background-color: #f9f9f9; /* Color de fondo */
-    color: #333; /* Color del texto */
-    transition: border-color 0.3s ease; /* Transición de color de borde */
+    width: 180px;
+    padding: 10px;
+    font-size: 14px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    background-color: #f9f9f9;
+    color: #333;
+    transition: border-color 0.3s ease; 
 }
 
 .form-select:focus {
-    border-color: #007bff; /* Color del borde al enfocar */
-    outline: none; /* Sin contorno */
+    border-color: #007bff;
+    outline: none; 
 }
 
-/* Estilos para los campos de entrada de texto (input) */
 .form-input {
     width: 180px;
     padding: 12px;
