--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -58,10 +58,15 @@
                 <h1>¡Hola!</h1>
                 <hr>
                 <p>Ingresa tus datos</p>
-                <div class="input-box registro-input-box">
+                <!--sdiv class="input-box registro-input-box">
                     <label for="email">Correo electrónico:</label>
                     <input type="email" id="email" name="email" class="registro-input" placeholder="Correo electrónico" required />
                     <h5>Ejemplo: usuario@dominio.com</h5>
+                </div-->
+                <div class="input-box registro-input-box">
+                    <label for="email">Usuario:</label>
+                    <input type="text" id="usuario" name="usuario" class="registro-input" placeholder="Usuario" required />
+                    <h5>Ejemplo: user123</h5>
                 </div>
                 <div class="input-box registro-input-box">
                     <label for="contrasena">Contraseña:</label>
@@ -69,7 +74,7 @@
                 </div>
                 
                 <div class="remember-forgot">
-                    <a href="#">Restablecer contraseña</a>
+                    <!--a href="#">Restablecer contraseña</a-->
                 </div>
                 <input type="submit" value="Iniciar Sesión" class="button-p" name="iniciar_sesion">               
             </form>
