--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Space+Grotesk:wght@300..700&display=swap');
+
 *{
     margin:0;
     padding:0;
@@ -73,9 +75,12 @@ body{
 }
 .img-header .welcome h4{
     color: #ffff;
-    font-weight: 400;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 .img-header .welcome > h2{margin-top: 50px;}
 .img-header .welcome > h2 a{
