--- a/src/main/resources/static/css/principal.css
+++ b/src/main/resources/static/css/principal.css
@@ -1,6 +1,8 @@
 @import url(colors.css);
 /*@import url(font.css);
 @import url(basic.css);*/
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Space+Grotesk:wght@300..700&display=swap');
 @import url(https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap);
 
 
