--- a/src/main/resources/templates/components/nav_panel.html
+++ b/src/main/resources/templates/components/nav_panel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,58 +17,68 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
+
 <body>
 
     <header id="header">
 
-     <!-- Navegation Menu -->
-     <nav class="menu">
-         <div class="logobox">
-             <h1 class="logo"><a href="#">
-                <i class="fas fa-utensils"></i>
-                GOOD DAY
-             </a></h1>
+        <!-- Navegation Menu -->
+        <nav class="menu">
+            <div class="logobox">
+                <h1 class="logo"><a href="#">
+                        <i class="fas fa-utensils"></i>
+                        GOOD DAY
+                    </a></h1>
 
-             <span class="btn-menu"><i class="fas fa-bars"></i></span>
-         </div>
+                <span class="btn-menu"><i class="fas fa-bars"></i></span>
+            </div>
 
-         <div class="list-container">
-             <ul class="lists">
-                 <li><a th:classappend="${activePage == 'bienvenido'} ? 'bg_hover color_dark'" th:href="@{/registro_completar}">Inicio</a></li>
-                 <li><a th:classappend="${activePage == 'carta'} ? 'bg_hover color_dark'" th:href="@{/carta}">Carta</a></li>
-                 <li><a th:href="@{/Nosotros}">Nosotros</a></li>
-             </ul>
-         </div>
+            <div class="list-container">
+                <ul class="lists">
+                    <li><a th:classappend="${activePage == 'bienvenido'} ? 'bg_hover color_dark'"
+                            th:href="@{/registro_completar}">Inicio</a></li>
+                    <li><a th:classappend="${activePage == 'carta'} ? 'bg_hover color_dark'"
+                            th:href="@{/carta}">Carta</a></li>
+                    <li><a th:href="@{/Nosotros}">Nosotros</a></li>
+                </ul>
+            </div>
 
-         <div class="user-actions">
-             <div th:if="${session.usuario != null}" class="user-info">
-                 <span th:text="'Bienvenido, ' + ${session.usuario}"></span> <!-- Muestra el mensaje de bienvenida -->
-                 <button class="toggle-logout" onclick="toggleLogout(event)" style="background: none; border: none; color: black; font-size: 20px;">▼</button> <!-- Botón para mostrar/ocultar el cierre de sesión -->
-                 <div class="logout-container" style="display: none;">
-                     <a href="/logout" class="buttoncerrar" title="Cerrar Sesión">Cerrar Sesión</a>
-                 </div>
-             </div>
-             <div th:if="${session.usuario == null}">
-                 <a href="/login" title="Iniciar Sesión" class="button">
-                     <i class="fas fa-user"></i> Iniciar Sesión
-                 </a>
-             </div>
-             <a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}" title="Carrito" class="button">
-                 <i class="fas fa-shopping-cart"></i> Carrito
-             </a>
-         </div>
-     </nav>
-     
+            <div class="user-actions">
+                <div th:if="${session.usuario != null}" class="user-info">
+                    <span th:text="'Bienvenido, ' + ${session.usuario}"></span>
+                    <!-- Muestra el mensaje de bienvenida -->
+                    <button class="toggle-logout" onclick="toggleLogout(event)"
+                        style="background: none; border: none; color: black; font-size: 20px;">▼</button>
+                    <!-- Botón para mostrar/ocultar el cierre de sesión -->
+                    
+                    <div class="logout-container" style="display: none;">
+                        <a href="/micuenta">micuenta</a> <br>
+                        <a href="/logout" class="buttoncerrar" title="Cerrar Sesión">Cerrar Sesión</a>
+                    </div>
+
+                </div>
+                <div th:if="${session.usuario == null}">
+                    <a href="/login" title="Iniciar Sesión" class="button">
+                        <i class="fas fa-user"></i> Iniciar Sesión
+                    </a>
+                </div>
+                <a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}"
+                    title="Carrito" class="button">
+                    <i class="fas fa-shopping-cart"></i> Carrito
+                </a>
+            </div>
+        </nav>
+
     </header>
-<!-- Scripts -->
-<script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
-<script src="/js/app.js"></script>
-<script>
-    function toggleLogout(event) {
-        event.preventDefault();
-        const logoutContainer = document.querySelector('.logout-container');
-        logoutContainer.style.display = logoutContainer.style.display === 'none' ? 'block' : 'none';
-    }
-</script>
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+    <script src="/js/app.js"></script>
+    <script>
+        function toggleLogout(event) {
+            event.preventDefault();
+            const logoutContainer = document.querySelector('.logout-container');
+            logoutContainer.style.display = logoutContainer.style.display === 'none' ? 'block' : 'none';
+        }
+    </script>
 
 </body>
