--- a/src/main/resources/templates/carta.html
+++ b/src/main/resources/templates/carta.html
@@ -17,7 +17,7 @@
 
     <section class="section carta-section">
         <div class="carta carta-container">
-            <h3 class="carta-title">Carta de Menú</h3>
+            <h3 class="carta-title" >Carta GOOD DAY</h3>
     
             <div class="carta-content">
                 <!-- Trabajamos con categorias 3 categorias fijas -->
