--- a/src/main/resources/static/css/modalproducto.css
+++ b/src/main/resources/static/css/modalproducto.css
@@ -6,7 +6,7 @@
     padding: 2rem;
     max-width: 800px;
     margin: 0 auto;
-    background-color: #420808 !important;
+    background-color: #ffffff !important;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -19,16 +19,17 @@
 .modal-producto-titulo {
     font-size: 2rem;
     font-weight: bold;
-    color: #333;
+    color: #6a0202;
     margin-bottom: 1.5rem;
 }
 
 .modal-producto-imagen {
     max-width: 100%;
     height: auto;
-    border-radius: 8px;
     margin-bottom: 1.5rem;
 }
+
+
 
 .modal-producto-precio {
     font-size: 1.5rem;
@@ -39,7 +40,7 @@
 
 .modal-producto-descripcion {
     font-size: 1rem;
-    color: #666;
+    color: #000000;
     line-height: 1.6;
     margin-bottom: 2rem;
 }
