Cambiar de estilo de Admin

--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -15,6 +15,7 @@
                 <ul class="menu">
                     <li><a href="/roles">Gestión de Roles</a></li>
                     <li><a href="/empleados">Gestión de Empleados</a></li>
+                    <li><a href="/pedidos">Gestión de Pedidos</a></li>
                 </ul>
             </nav>
         </div>
