--- a/src/main/resources/templates/formEmpleados.html
+++ b/src/main/resources/templates/formEmpleados.html
@@ -40,7 +40,8 @@
             <option th:each="rol : ${roles}" th:value="${rol.idRol}" th:text="${rol.nomRol}"></option>
             <option value="nuevo">Crear Nuevo Rol</option>
         </select>
-        <button type="submit">Siguiente</button>-->
+        -->
+        <button type="submit">Siguiente</button>
     </form>
     <a href="/empleados">Volver a la lista</a>
 </body>
