--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -8,6 +8,7 @@
                 <li class="navbar-item"><a href="/roles" class="navbar-link">Gestión de Roles</a></li>
                 <li class="navbar-item"><a href="/empleados" class="navbar-link">Gestión de Empleados</a></li>
                 <li class="navbar-item"><a href="/listapedidos" class="navbar-link">Gestión de Pedidos</a></li>
+                <li class="navbar-item"><a href="/listaproductos" class="navbar-link">Gestión de Productos</a></li>
                 <li class="navbar-item"><a href="/reportes-ingresos" class="navbar-link">Reportes de Ingresos</a></li>
             </ul>
         </nav>
