--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -1,20 +1,65 @@
-
-    
-    <div class="container">
-        <div class="navbar">
-            <h1>Menú de Administración</h1>
-            <nav>
-                <ul class="menu">
-                    <li><a href="/roles">Gestión de Roles</a></li>
-                    <li><a href="/empleados">Gestión de Empleados</a></li>
-                    <li><a href="/pedidos">Gestión de Pedidos</a></li>
-                    <li class="navbar-item"><a href="/reportes-ingresos" class="navbar-link">Reportes de Ingresos</a></li>
-                </ul>
-            </nav>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/adminMenu.css">
+</head>
+<body>
+    <div class="admin-menu">
+        <div class="container-fluid">
+            <h1 class="text-center menu-title">Menú de Administración</h1>
+            <div class="row justify-content-center">
+                <!-- Primera columna -->
+                <div class="col-md-4">
+                    <div class="menu-item">
+                        <a href="/roles">
+                            <i class="fas fa-user-tag"></i>
+                            Gestión de Roles
+                        </a>
+                    </div>
+                    <div class="menu-item">
+                        <a href="/empleados">
+                            <i class="fas fa-users"></i>
+                            Gestión de Empleados
+                        </a>
+                    </div>
+                </div>
+                
+                <!-- Segunda columna -->
+                <div class="col-md-4">
+                    <div class="menu-item">
+                        <a href="/productos">
+                            <i class="fas fa-box"></i>
+                            Gestión de Productos
+                        </a>
+                    </div>
+                    <div class="menu-item">
+                        <a href="/clientes">
+                            <i class="fas fa-user-friends"></i>
+                            Gestión de Clientes
+                        </a>
+                    </div>
+                </div>
+                
+                <!-- Tercera columna -->
+                <div class="col-md-4">
+                    <div class="menu-item">
+                        <a href="/pedidos">
+                            <i class="fas fa-shopping-cart"></i>
+                            Gestión de Pedidos
+                        </a>
+                    </div>
+                    <div class="menu-item">
+                        <a href="/reportes-ingresos">
+                            <i class="fas fa-chart-line"></i>
+                            Reportes de Ingresos
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <footer>
-            
-        </footer>
     </div>
+    <!-- Font Awesome para los iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </body>
 </html> 
