--- a/src/main/resources/templates/formProducto.html
+++ b/src/main/resources/templates/formProducto.html
@@ -48,12 +48,15 @@
                                 <option value="4">Postres</option>
                             </select>
                         </div>
+                        <div>
+                            <label for="file">Imagen del Producto:</label>
+                            <input type="file" id="file" name="file" accept="image/*">
+                        </div>
                         
-                        
-                        <div class="col-md-12 mb-3">
+                        <!--<div class="col-md-12 mb-3">
                             <label for="fotoProducto" class="form-label">Imagen</label>
                             <input type="text" class="form-control" id="fotoProducto" th:field="*{fotoProducto}">
-                        </div>
+                        </div>-->
                     </div>
                     
                     <div class="mt-3">
