--- a/src/main/resources/templates/listProductos.html
+++ b/src/main/resources/templates/listProductos.html
@@ -49,7 +49,7 @@
                                 </td>
                                 
                                 <td>
-                                    <img th:src="@{/upload/productos/{nombre}(nombre=${producto.fotoProducto} + '.jpg')}" 
+                                    <img th:src="@{/upload/productos/{nombre}(nombre=${producto.fotoProducto})}" 
                                     alt="Sin foto" style="width: 100px; height: auto;" />
                                 </td>
                                 <td>
@@ -59,6 +59,12 @@
                             </tr>
                         </tbody>
                     </table>
+
+                    <div class="mt-3">
+                        <a href="/productos/nuevo" class="btn btn-primary">
+                            <i class="fas fa-plus"></i> Nuevo Producto
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
